--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(fuse-example)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_EXTENSIONS ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall --pedantic -D_FILE_OFFSET_BITS=64")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall --pedantic -g")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
@@ -16,5 +16,7 @@ find_package(FUSE REQUIRED)
 find_package(Boost REQUIRED filesystem)
 include_directories(include ${FUSE_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
 
+add_library(aqfs src/disk.cpp src/base.cpp src/inode.cpp src/dir.cpp)
+
 add_executable(aqfs.fuse src/fs.cpp)
-target_link_libraries(aqfs.fuse ${FUSE_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(aqfs.fuse aqfs ${FUSE_LIBRARIES} ${Boost_LIBRARIES})
